fix jumping content

--- a/frontend/css/todos.css
+++ b/frontend/css/todos.css
@@ -31,13 +31,14 @@ html{
     transition: 2s;
 }
 
+
 .todoForm:hover{
     transition: 0.5s;
     opacity: 100%;
 }
 
 .todoTitleBox{
-transition: 0.5s;
+    transition: 0.5s;
     font-weight: 700;
     font-size: xx-large;
     text-align: center;
@@ -123,6 +124,7 @@ input:focus{
     background-color: #f5f5f5;
     margin: 0;
     padding: 3% 4% 1% 4%;
+    height: 50vh;
 }
 
 .todoList > span {
